chore(ui): polish navigation and control helpers